force-app/main/default/objects/Account/fields/CSCMKillReason__c.field-meta.xml
<CustomField>
    <fullName>CSCMKillReason__c</fullName>
    <inlineHelpText>Reason code from the ClientSpace Client Master for a client going lost.</inlineHelpText>
    <label>CS CM Kill Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdvisorDislikes_Broker</fullName>
            </value>
            <value>
                <fullName>AdvisorDislikes_CPA</fullName>
            </value>
            <value>
                <fullName>AdvisorDislikes_Other</fullName>
            </value>
            <value>
                <fullName>AutoExpired</fullName>
            </value>
            <value>
                <fullName>CannotGiveUpControl</fullName>
            </value>
            <value>
                <fullName>ChangeChallenged</fullName>
            </value>
            <value>
                <fullName>Closed_DidNotStart</fullName>
            </value>
            <value>
                <fullName>Denied_FailedCredit</fullName>
            </value>
            <value>
                <fullName>Denied_FailedHealth</fullName>
            </value>
            <value>
                <fullName>Denied_FailedRisk</fullName>
            </value>
            <value>
                <fullName>Implementation No Start</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Prestige</fullName>
            </value>
            <value>
                <fullName>NotEnoughValue</fullName>
            </value>
            <value>
                <fullName>Paychex/HROI client</fullName>
            </value>
            <value>
                <fullName>PoorTiming</fullName>
            </value>
            <value>
                <fullName>PoorTiming_DoubleTaxes</fullName>
            </value>
            <value>
                <fullName>PoorTiming_Workers Comp</fullName>
            </value>
            <value>
                <fullName>PoorTimingHealth_Renewal</fullName>
            </value>
            <value>
                <fullName>TestRecord</fullName>
            </value>
            <value>
                <fullName>TooExpensive</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-ADPTS</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-CoAdvantage</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Engage</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Extensis</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Insperity</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Just Works</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Other (see Comments)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-Paychex</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor-TriNet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>