force-app/main/default/objects/Account/fields/CSImportID__c.field-meta.xml
<CustomField>
    <fullName>CSImportID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ClientSpace Import ID</inlineHelpText>
    <label>CS Import ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>