force-app/main/default/objects/Account/fields/CSOrgCategory__c.field-meta.xml
<CustomField>
    <fullName>CSOrgCategory__c</fullName>
    <defaultValue>&quot;Prospect&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Client Space org category</inlineHelpText>
    <label>CS Org Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>