force-app/main/default/objects/Account/fields/CSOrgID__c.field-meta.xml
<CustomField>
    <fullName>CSOrgID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Org ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>