force-app/main/default/objects/Account/fields/CSPrimaryClientNumber__c.field-meta.xml
<CustomField>
    <fullName>CSPrimaryClientNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Client Space Primary Client Number</inlineHelpText>
    <label>CS Primary Client Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>