force-app/main/default/objects/Account/fields/CSServiceType__c.field-meta.xml
<CustomField>
    <fullName>CSServiceType__c</fullName>
    <inlineHelpText>The Client Space Service Type</inlineHelpText>
    <label>CS Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>