force-app/main/default/objects/Account/fields/CSSR_Segment__c.field-meta.xml
<CustomField>
    <fullName>CSSR_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets set by batch job when record should be assigned to cssr</description>
    <inlineHelpText>Indicates that a client has been running payroll for a certain amount of time (12 months?) and is available for separate payroll segmentation.</inlineHelpText>
    <label>CSSR Segment</label>
    <type>Checkbox</type>
</CustomField>