force-app/main/default/objects/Account/fields/Current_Credit_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Limit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the current credit limit was set</inlineHelpText>
    <label>Current Credit Limit Date</label>
    <type>Date</type>
</CustomField>