force-app/main/default/objects/Account/fields/Current_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_ID__c</fullName>
    <description>Shows current owner of Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Owner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>