force-app/main/default/objects/Account/fields/CurrentClient__c.field-meta.xml
<CustomField>
    <fullName>CurrentClient__c</fullName>
    <formula>OR(
AND( (Bis_ID__c &gt; 0)
,NOT(ISBLANK(First_Run_Date__c))
,ISBLANK(Lost_Date__c)
,( TEXT(Type) != &quot;Lost Client&quot;)
,( TEXT(Type) != &quot;HRS Client (Only)&quot;)
,( TEXT(Type) != &quot;HR Solutions NPR Client&quot;))
,(TEXT(Type) = &quot;HROi Client&quot;)
,(TEXT(Type) = &quot;Oasis Client&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this a current client?</inlineHelpText>
    <label>Current Client?</label>
    <type>Checkbox</type>
</CustomField>