force-app/main/default/objects/Account/fields/Data_Review__c.field-meta.xml
<CustomField>
    <fullName>Data_Review__c</fullName>
    <description>Case 33499235</description>
    <label>Sales Triggers Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - No Info Avail</fullName>
                <label>Completed - Bad Contact</label>
            </value>
            <value>
                <fullName>Completed CSSR</fullName>
            </value>
            <value>
                <fullName>Completed HR Services</fullName>
            </value>
            <value>
                <fullName>Completed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Completed – Merged</fullName>
                <label>Completed - Merged</label>
            </value>
            <value>
                <fullName>Completed - Multi ID confirmed</fullName>
            </value>
            <value>
                <fullName>Completed - Multi ID not confirmed</fullName>
            </value>
            <value>
                <fullName>Completed - Out of Business</fullName>
            </value>
            <value>
                <fullName>Completed - Out of Country</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers - Business Expansion</fullName>
                <label>New Business Expansion</label>
            </value>
            <value>
                <fullName>Completed - Triggers - Compliance</fullName>
                <label>Compliance</label>
            </value>
            <value>
                <fullName>Completed - Triggers - Employee Hiring</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers - Event Promotion</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers - M&amp;A and Funding</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers - Multiple</fullName>
            </value>
            <value>
                <fullName>Completed - Zoom Conflict</fullName>
            </value>
            <value>
                <fullName>Corrections Needed = internal PI use</fullName>
            </value>
            <value>
                <fullName>Duplicate = internal PI use</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Multi ID = internal PI use</fullName>
            </value>
            <value>
                <fullName>Out of Segment = internal PI use</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed - Triggers - Leadership Change</fullName>
                <label>New Leadership</label>
            </value>
            <value>
                <fullName>Completed - Triggers - Employee Turnover</fullName>
                <label>Employee Turnover</label>
            </value>
            <value>
                <fullName>G2.com Buyer Intent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>