force-app/main/default/objects/Account/fields/Dataflux_Name_MatchCode__c.field-meta.xml
<CustomField>
    <fullName>Dataflux_Name_MatchCode__c</fullName>
    <description>Matchcode for the company name returned from Dataflux</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dataflux Name MatchCode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>