force-app/main/default/objects/Account/fields/Date_Ready_to_be_Transitioned_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Ready_to_be_Transitioned_to_Service__c</fullName>
    <description>Used for an MPSC report to know when Preview to Flex migration clients are ready to be transitioned to Service. Can be deleted after 5ish years. Case 21741558</description>
    <formula>IF( AND( NOT(ISBLANK(Flex_First_Scheduled_Run_Date__c)),ISPICKVAL(Frequency__c,&apos;1 Weekly&apos;)),Flex_First_Scheduled_Run_Date__c +14, 
IF(AND( NOT(ISBLANK(Flex_First_Scheduled_Run_Date__c)),NOT(ISPICKVAL(Frequency__c,&apos;1 Weekly&apos;))),Flex_First_Scheduled_Run_Date__c +30,null))</formula>
    <label>Date Ready to be Transitioned to Service</label>
    <type>Date</type>
</CustomField>