force-app/main/default/objects/Account/fields/Deloitte_Segment__c.field-meta.xml
<CustomField>
    <fullName>Deloitte_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deloitte Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>