force-app/main/default/objects/Account/fields/Description_of_operations__c.field-meta.xml
<CustomField>
    <fullName>Description_of_operations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of operations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>