force-app/main/default/objects/Account/fields/Dialed__c.field-meta.xml
<CustomField>
    <fullName>Dialed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was this record dialed by someone (NSS)?</inlineHelpText>
    <label>Dialed</label>
    <type>Checkbox</type>
</CustomField>