force-app/main/default/objects/Account/fields/DialedUserId__c.field-meta.xml
<CustomField>
    <fullName>DialedUserId__c</fullName>
    <description>Used by the backend process - if we need to force the dialed for a user that isn&apos;t the running user.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dialed-User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>