force-app/main/default/objects/Account/fields/Do_Not_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Do Not Call Date</label>
    <type>Date</type>
</CustomField>