force-app/main/default/objects/Account/fields/EBSShipToSiteID__c.field-meta.xml
<CustomField>
    <fullName>EBSShipToSiteID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ship to site use ID defined in EBS</inlineHelpText>
    <label>EBS Ship To Site ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>