force-app/main/default/objects/Account/fields/EmailLastOpened__c.field-meta.xml
<CustomField>
    <fullName>EmailLastOpened__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time an email from a contact was last opened.</inlineHelpText>
    <label>Email Last Opened</label>
    <type>DateTime</type>
</CustomField>