force-app/main/default/objects/Account/fields/EmailLastSent__c.field-meta.xml
<CustomField>
    <fullName>EmailLastSent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time an email was last sent by a contact</inlineHelpText>
    <label>Email Last Sent</label>
    <type>DateTime</type>
</CustomField>