force-app/main/default/objects/Account/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>field to put on page layouts for manual input and fed in by integrations.  Will be added to child Employee rollup and put into NumberOfEmployees to be used for segmentation and ownership processes.  Case #22797869</description>
    <inlineHelpText>Active employee count is determined by the number of employees being paid per pay period, not the check count.</inlineHelpText>
    <label>Single ID Employee count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>