force-app/main/default/objects/Account/fields/ERTCConversationOutcome__c.field-meta.xml
<CustomField>
    <fullName>ERTCConversationOutcome__c</fullName>
    <description>Editable by all Sales to outline the ERTC Outcome. This is to be used only until the ERTC Credit expires. To be evaluated in 6 months from creation date to if it needs to be removed/kept/repurposed</description>
    <inlineHelpText>What is the result of the conversation around ERTC?</inlineHelpText>
    <label>ERTC Conversation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently has ERTC with Paychex</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduled to Discuss ERTC</fullName>
            </value>
            <value>
                <fullName>Not Eligible - no shutdown or loss of revenue​</fullName>
            </value>
            <value>
                <fullName>Not Eligible - no eligible employees (all family/owner only)​</fullName>
            </value>
            <value>
                <fullName>Not Interested​ - Other</fullName>
            </value>
            <value>
                <fullName>Not Interested - Credit already received​</fullName>
            </value>
            <value>
                <fullName>Not Interested - Working with CPA, 3rd party, or another vendor​</fullName>
            </value>
            <value>
                <fullName>Not Interested - Price is too high​</fullName>
            </value>
            <value>
                <fullName>Not Interested - Previously declined with another sales rep</fullName>
            </value>
            <value>
                <fullName>Unable to Make Contact</fullName>
            </value>
            <value>
                <fullName>Not Interested - Apprehensive Due to IRS Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>