force-app/main/default/objects/Account/fields/ESR_Completion__c.field-meta.xml
<CustomField>
    <fullName>ESR_Completion__c</fullName>
    <description>This field is populated with a decimal that represents the amount of completed data in the Employee Filing screen and is fed in from HRIS and then populated by a formula field on Reference Agency.
Case 24776323</description>
    <label>ESR Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>