force-app/main/default/objects/Account/fields/ESR_In_House_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>ESR_In_House_Print_Date__c</fullName>
    <description>This field will be populated by HRIS and fed down to Reference Agency object with a formula field.
It will display the most recent date a client has had a package sent to them via EPFC and be pulled from ph_updated_date from esr.package_history in HRIS.
Case 24776323</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ESR In House Print Date</label>
    <type>Date</type>
</CustomField>