force-app/main/default/objects/Account/fields/ESR_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>ESR_Person_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESR Person ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>