force-app/main/default/objects/Account/fields/ESR_RRD_Transmit_Date__c.field-meta.xml
<CustomField>
    <fullName>ESR_RRD_Transmit_Date__c</fullName>
    <description>This field will be populated by HRIS and fed down to Reference Agency object with a formula field.
It will display the original print date, and most recent print date for active ESR clients and will be pulled from yef_created_date, yef_updated_date from esr.year_end_fulfillment in HRIS.
Case 24776323</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ESR RRD Transmit Date</label>
    <type>Date</type>
</CustomField>