force-app/main/default/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description>For case 17797057. Field is being populated upon import from Salesgenie. Will be populated from GeoScape at a future TBD date.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>Central and Southwest Asian</fullName>
            </value>
            <value>
                <fullName>Eastern European</fullName>
            </value>
            <value>
                <fullName>Far Eastern</fullName>
            </value>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
            </value>
            <value>
                <fullName>Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Scandinavian</fullName>
            </value>
            <value>
                <fullName>South Asian</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>HA1</fullName>
            </value>
            <value>
                <fullName>HA2</fullName>
            </value>
            <value>
                <fullName>HA3</fullName>
            </value>
            <value>
                <fullName>HA4</fullName>
            </value>
            <value>
                <fullName>HA5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>