force-app/main/default/objects/Account/fields/EvaluateCadence__c.field-meta.xml
<CustomField>
    <fullName>EvaluateCadence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evaluate the Cadence records associated with this account (if any). Updates the In Cadence and Cadence Types fields.</inlineHelpText>
    <label>Evaluate Cadence</label>
    <type>Checkbox</type>
</CustomField>