force-app/main/default/objects/Account/fields/EvaluateRefAcctOwner__c.field-meta.xml
<CustomField>
    <fullName>EvaluateRefAcctOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evaluate ownership of the account based on the attached referral sources</inlineHelpText>
    <label>Evaluate Ref Acct Owner</label>
    <type>Checkbox</type>
</CustomField>