force-app/main/default/objects/Account/fields/EvaluateSignificant__c.field-meta.xml
<CustomField>
    <fullName>EvaluateSignificant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click this to re-evaluate the Significant Contact</inlineHelpText>
    <label>Evaluate Significant</label>
    <type>Checkbox</type>
</CustomField>