force-app/main/default/objects/Account/fields/External_WholeSaler_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_WholeSaler_Account_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External WholeSaler Account Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>