force-app/main/default/objects/Account/fields/FEIN_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Parent_ID__c</fullName>
    <description>This field feeds in from HRIS.  The purpose of this field is to consolidate multiple payroll IDs under the same Federal ID (FEIN) for automated tax fling.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This ID provides a grouping of SAME FEIN Affiliation Type, allowing clients to consolidate multiple payrolls under the same Fed ID.</inlineHelpText>
    <label>Same FEIN ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>