force-app/main/default/objects/Account/fields/First_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Run_Date__c</fullName>
    <description>Fed in from HRIS and Payroll nightly. 
Field fed into Oracle Analytics (OBIEE) system nightly.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Run/Core Start Date</label>
    <type>Date</type>
</CustomField>