force-app/main/default/objects/Account/fields/Flex_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Flex_Hiring__c</fullName>
    <description>This field is used to indicate which products and services a Prospect-Dlient uses.</description>
    <label>Flex Hiring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flex Hiring</fullName>
            </value>
            <value>
                <fullName>Flex Onboarding</fullName>
            </value>
            <value>
                <fullName>Flex Recruiting</fullName>
            </value>
            <value>
                <fullName>Recruiting and Applicant Tracking</fullName>
            </value>
            <value>
                <fullName>myStaffingPro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>