force-app/main/default/objects/Account/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Fed in from HRIS and Payroll nightly. 
Field fed into Oracle Analytics (OBIEE) system nightly.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Weekly</fullName>
            </value>
            <value>
                <fullName>2 Bi-weekly</fullName>
            </value>
            <value>
                <fullName>3 Semi-monthly</fullName>
            </value>
            <value>
                <fullName>4 Monthly</fullName>
            </value>
            <value>
                <fullName>5 Quarterly</fullName>
            </value>
            <value>
                <fullName>6 Semi-annually</fullName>
            </value>
            <value>
                <fullName>7 Annually</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>