force-app/main/default/objects/Account/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the integration from HRIS.</description>
    <label>PAYX FSA</label>
    <type>Checkbox</type>
</CustomField>